# howto

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
ci/: install-rust.sh  release.sh
src/: main.rs
src/openai/: mod.rs  models.rs  request.rs
