[package]
name = "howto"
version = "0.1.0"
edition = "2021"
authors = ["molu"]
description = "Simple, GPT-4 powered, command-line tools designed to assist IT professionals with their daily tasks."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[[bin]]
name = "howto"
path = "src/main.rs"

[[bin]]
name = "whatis"
path = "src/main.rs"